# mymhorse

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  common.h  tcp_client.c  tcp_server.c
mid/: CMakeLists.txt  README.md  mymclient.c  mymserver.c
